--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.4.1",
     "gulp-exec": "^2.1.2",
+    "gulp-jshint": "^2.0.4",
     "gulp-less": "^3.0.5",
     "gulp-minify-css": "^0.3.8",
     "gulp-minify-html": "^0.1.6",
@@ -14,6 +15,8 @@
     "gulp-uglify": "^1.0.1",
     "gulp-usemin": "^0.3.7",
     "gulp-wrap": "^0.3.0",
+    "jshint": "^2.9.5",
+    "jshint-stylish": "^2.2.1",
     "run-sequence": "^1.2.2"
   }
 }
